--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
     "babel-preset-expo": "~8.0.0",
+    "expo-cli": "^3.13.6",
     "typescript": "~3.6.3"
   },
   "private": true
