--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-native-fontawesome": "^0.2.3",
+    "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/native": "^5.0.10",
+    "@react-navigation/stack": "^5.2.0",
     "css-select": "^2.1.0",
     "css-tree": "^1.0.0-alpha.39",
     "expo": "~36.0.0",
@@ -19,6 +22,9 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-svg": "^10.1.0",
     "react-native-web": "~0.11.7",
