--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-tree": "^1.0.0-alpha.39",
     "expo": "~36.0.0",
     "expo-location": "~8.0.0",
+    "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
