--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,4 +16,4 @@ steps:
     npm run build
     npx expo login -u $(EXPO_USERNAME) -p $(EXPO_PASSWORD)
     npx expo publish --non-interactive
-  displayName: 'npm install, build and deploz'
+  displayName: 'npm install, build and deploy'
