--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "test": "jest"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/react-native-fontawesome": "^0.2.3",
-    "@react-native-community/masked-view": "0.1.5",
-    "@react-navigation/native": "^5.0.10",
-    "@react-navigation/stack": "^5.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-native-fontawesome": "^0.2.5",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "css-select": "^2.1.0",
     "css-tree": "^1.0.0-alpha.39",
-    "expo": "~36.0.0",
-    "expo-location": "~8.0.0",
-    "moment": "^2.24.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "expo": "~38.0.10",
+    "expo-location": "~8.3.0",
+    "moment": "^2.28.0",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-svg": "^10.1.0",
-    "react-native-web": "~0.11.7",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.7",
+    "react-native-screens": "2.11.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "~0.13.12",
     "suncalc": "^1.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@types/jest": "^25.1.4",
-    "@types/react": "~16.9.0",
-    "@types/react-native": "~0.60.23",
-    "babel-preset-expo": "~8.0.0",
-    "expo-cli": "^3.13.6",
-    "jest": "^25.1.0",
-    "ts-jest": "^25.2.1",
-    "typescript": "~3.6.3"
+    "@babel/core": "^7.11.6",
+    "@types/jest": "^26.0.13",
+    "@types/react": "~16.9.49",
+    "@types/react-native": "~0.63.18",
+    "babel-preset-expo": "~8.2.3",
+    "expo-cli": "^3.27.4",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.3.0",
+    "typescript": "~4.0.2"
   },
   "private": true
 }
