--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^5.9.0",
     "css-select": "^2.1.0",
     "css-tree": "^1.0.0-alpha.39",
-    "expo": "~38.0.10",
+    "expo": "^39.0.1",
     "expo-location": "~8.3.0",
     "moment": "^2.28.0",
     "react": "~16.13.1",
