--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "test": "jest"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-native-fontawesome": "^0.2.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
-    "css-select": "^2.1.0",
-    "css-tree": "^1.0.0-alpha.39",
-    "expo": "^39.0.1",
-    "expo-location": "~8.3.0",
-    "moment": "^2.28.0",
-    "react": "~16.13.1",
-    "react-dom": "~16.13.1",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
+    "css-select": "^3.1.2",
+    "css-tree": "^1.1.2",
+    "expo": "^40.0.1",
+    "expo-location": "~11.0.0",
+    "moment": "^2.29.1",
+    "react": "~17.0.1",
+    "react-dom": "~17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.7",
-    "react-native-screens": "2.11.0",
+    "react-native-gesture-handler": "~1.10.3",
+    "react-native-reanimated": "~2.0.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "2.18.1",
     "react-native-svg": "^12.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.15.0",
     "suncalc": "^1.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@types/jest": "^26.0.13",
-    "@types/react": "~16.9.49",
-    "@types/react-native": "~0.63.18",
-    "babel-preset-expo": "~8.2.3",
-    "expo-cli": "^3.27.4",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.3.0",
-    "typescript": "~4.0.2"
+    "@babel/core": "^7.13.8",
+    "@types/jest": "^26.0.20",
+    "@types/react": "~17.0.3",
+    "@types/react-native": "~0.63.51",
+    "babel-preset-expo": "~8.3.0",
+    "expo-cli": "^4.2.1",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.3",
+    "typescript": "~4.2.3"
   },
   "private": true
 }
