--- a/package.json
+++ b/package.json
@@ -17,30 +17,30 @@
     "@react-navigation/stack": "^5.14.3",
     "css-select": "^3.1.2",
     "css-tree": "^1.1.2",
-    "expo": "^40.0.1",
-    "expo-location": "~11.0.0",
+    "expo": "^40.0.0",
+    "expo-location": "~10.0.0",
     "moment": "^2.29.1",
-    "react": "~17.0.1",
-    "react-dom": "~17.0.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.3",
-    "react-native-reanimated": "~2.0.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "2.18.1",
-    "react-native-svg": "^12.1.0",
-    "react-native-web": "~0.15.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.13.12",
     "suncalc": "^1.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
+    "@babel/core": "~7.9.0",
     "@types/jest": "^26.0.20",
-    "@types/react": "~17.0.3",
-    "@types/react-native": "~0.63.51",
-    "babel-preset-expo": "~8.3.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "babel-preset-expo": "8.3.0",
     "expo-cli": "^4.2.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.3",
-    "typescript": "~4.2.3"
+    "typescript": "~4.0.0"
   },
   "private": true
 }
